feat(broker): added new strategies to the broker, also added a new testing notebook

--- a/src/pybacktestchain_ss/test.ipynb
+++ b/src/pybacktestchain_ss/test.ipynb
@@ -16,64 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Running backtest from 2019-01-01 00:00:00 to 2020-01-01 00:00:00.\n",
-      "INFO:root:Retrieving price data for universe\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Error computing portfolio, returning equal weight portfolio\n",
-      "WARNING:root:not enough values to unpack (expected 2, got 0)\n",
-      "WARNING:root:Error computing portfolio, returning equal weight portfolio\n",
-      "WARNING:root:not enough values to unpack (expected 2, got 0)\n",
-      "c:\\Users\\samul\\anaconda3\\envs\\projectenv\\Lib\\site-packages\\pandas\\core\\frame.py:11211: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  base_cov = np.cov(mat.T, ddof=ddof)\n",
-      "c:\\Users\\samul\\anaconda3\\envs\\projectenv\\Lib\\site-packages\\numpy\\lib\\function_base.py:2748: RuntimeWarning: divide by zero encountered in divide\n",
-      "  c *= np.true_divide(1, fact)\n",
-      "c:\\Users\\samul\\anaconda3\\envs\\projectenv\\Lib\\site-packages\\numpy\\lib\\function_base.py:2748: RuntimeWarning: invalid value encountered in multiply\n",
-      "  c *= np.true_divide(1, fact)\n",
-      "WARNING:root:Error computing portfolio, returning equal weight portfolio\n",
-      "WARNING:root:Optimization did not converge\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-01-31 00:00:00\n",
-      "C:\\Users\\samul\\pybacktestchain_ss\\src\\pybacktestchain_ss\\broker.py:116: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  self.transaction_log = pd.concat([self.transaction_log, transaction], ignore_index=True)\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-02-28 00:00:00\n",
-      "INFO:root:Stop loss triggered for TSLA at 2019-03-06 00:00:00. Selling all shares.\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-03-29 00:00:00\n",
-      "INFO:root:Stop loss triggered for TSLA at 2019-04-26 00:00:00. Selling all shares.\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-04-30 00:00:00\n",
-      "INFO:root:Stop loss triggered for TSLA at 2019-05-18 00:00:00. Selling all shares.\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-05-31 00:00:00\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-06-28 00:00:00\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-07-31 00:00:00\n",
-      "INFO:root:Stop loss triggered for TSLA at 2019-08-16 00:00:00. Selling all shares.\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-08-30 00:00:00\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-09-30 00:00:00\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-10-31 00:00:00\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-11-29 00:00:00\n",
-      "INFO:root:-----------------------------------\n",
-      "INFO:root:Rebalancing portfolio at 2019-12-31 00:00:00\n",
-      "INFO:root:Backtest completed. Final portfolio value: 1528117.5739183426\n"
+     "ename": "TypeError",
+     "evalue": "Backtest.__init__() got an unexpected keyword argument 'portfolio_strategy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m backtest \u001b[38;5;241m=\u001b[39m \u001b[43mBacktest\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43minitial_date\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdatetime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2019\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfinal_date\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdatetime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2020\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43muniverse\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAAPL\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTSLA\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGOOGL\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43minitial_cash\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1000000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43minformation_class\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mFirstTwoMoments\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrisk_model\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mStopLoss\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrisk_threshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mname_blockchain\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbacktest\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mportfolio_strategy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrisk_averse_portfolio\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mverbose\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m backtest\u001b[38;5;241m.\u001b[39mrun_backtest()\n",
+      "\u001b[1;31mTypeError\u001b[0m: Backtest.__init__() got an unexpected keyword argument 'portfolio_strategy'"
      ]
     }
    ],
@@ -86,7 +40,8 @@
     "    information_class=FirstTwoMoments,\n",
     "    risk_model=StopLoss,\n",
     "    risk_threshold=0.1,\n",
-    "    name_blockchain='backtest',\n",
+    "    name_blockchain=\"backtest\",\n",
+    "    portfolio_strategy=\"risk_averse_portfolio\",\n",
     "    verbose=verbose\n",
     ")\n",
     "\n",
