feat(portfolio_strategies): created a new .py file to make editing and storing different strategies more simple. Also detached the strategies from the Information class for easier manipulation. The user can now choose which strategy to implement (note: maximum sharpe and equal var strategies still have convergence issues).

--- a/src/pybacktestchain_ss/test2.ipynb
+++ b/src/pybacktestchain_ss/test2.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pybacktestchain_ss.data_module import FirstTwoMoments\n",
     "from pybacktestchain_ss.broker import Backtest, StopLoss, ProfitTaking\n",
+    "from pybacktestchain_ss.portfolio_strategies import RiskAverseStrategy, MaximumReturnStrategy\n",
     "from datetime import datetime\n",
     "\n",
     "# Set verbosity for logging\n",
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -24,26 +25,51 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Running backtest from 2019-01-01 00:00:00 to 2020-01-01 00:00:00.\n",
-      "INFO:root:Retrieving price data for universe\n",
-      "WARNING:root:Portfolio strategy not chosen, try again.\n",
-      "WARNING:root:FirstTwoMoments.risk_averse_portfolio() missing 1 required positional argument: 'information_set'\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "INFO:root:Retrieving price data for universe\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\samul\\anaconda3\\envs\\projectenv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "WARNING:root:Error computing Maximum Return Portfolio, returning equal weight portfolio\n",
+      "WARNING:root:attempt to get argmax of an empty sequence\n",
+      "WARNING:root:Error computing Maximum Return Portfolio, returning equal weight portfolio\n",
+      "WARNING:root:attempt to get argmax of an empty sequence\n",
+      "c:\\Users\\samul\\anaconda3\\envs\\projectenv\\Lib\\site-packages\\pandas\\core\\frame.py:11211: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  base_cov = np.cov(mat.T, ddof=ddof)\n",
+      "c:\\Users\\samul\\anaconda3\\envs\\projectenv\\Lib\\site-packages\\numpy\\lib\\function_base.py:2748: RuntimeWarning: divide by zero encountered in divide\n",
+      "  c *= np.true_divide(1, fact)\n",
+      "c:\\Users\\samul\\anaconda3\\envs\\projectenv\\Lib\\site-packages\\numpy\\lib\\function_base.py:2748: RuntimeWarning: invalid value encountered in multiply\n",
+      "  c *= np.true_divide(1, fact)\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-01-31 00:00:00\n",
+      "C:\\Users\\samul\\pybacktestchain_ss\\src\\pybacktestchain_ss\\broker.py:118: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  self.transaction_log = pd.concat([self.transaction_log, transaction], ignore_index=True)\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-02-28 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-03-29 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-04-30 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-05-31 00:00:00\n",
+      "INFO:root:Stop loss triggered for META at 2019-06-04 00:00:00. Selling all shares.\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-06-28 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-07-31 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-08-30 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-09-30 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-10-31 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-11-29 00:00:00\n",
+      "INFO:root:-----------------------------------\n",
+      "INFO:root:Rebalancing portfolio at 2019-12-31 00:00:00\n",
+      "INFO:root:Backtest completed. Final portfolio value: 1127253.5826382637\n"
      ]
     }
    ],
@@ -57,7 +83,7 @@
     "    risk_model=StopLoss,\n",
     "    risk_threshold=0.1,\n",
     "    name_blockchain=\"backtest\",\n",
-    "    portfolio_strategy=FirstTwoMoments.risk_averse_portfolio,\n",
+    "    portfolio_strategy=MaximumReturnStrategy,\n",
     "    verbose=verbose\n",
     ")\n",
     "\n",
