feat(streamlit): removed some unused code and added the first iteration of the streamlit user interface code for testing on the streamlit cloud.

--- a/src/pybacktestchain_ss/test_notebook.ipynb
+++ b/src/pybacktestchain_ss/test_notebook.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from pybacktestchain_ss.data_module import FirstTwoMoments\n",
     "from pybacktestchain_ss.broker import Backtest, StopLoss, ProfitTaking\n",
-    "from pybacktestchain_ss.portfolio_strategies import RiskAverseStrategy, MaximumReturnStrategy\n",
+    "from pybacktestchain_ss.portfolio_strategies import RiskAverseStrategy, MaximumReturnStrategy # and other strategies\n",
     "from datetime import datetime\n",
     "\n",
     "# Set verbosity for logging\n",
